--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -18,4 +18,4 @@ jobs:
       - name: Install dependencies
         run: npm install
       - name: Deploy to Cloudflare Workers
-        run: npm run deploy
+        run: export CLOUDFLARE_API_TOKEN=${{ secrets.CLOUDFLARE_API_TOKEN }} && npm run deploy
