--- a/package.json
+++ b/package.json
@@ -8,6 +8,7 @@
     "deploy": "wrangler deploy"
   },
   "dependencies": {
-    "hono": "^3.2.7"
+    "hono": "^4.0.0",
+    "wrangler": "^4.0.0"
   }
 }
