--- a/package.json
+++ b/package.json
@@ -3,6 +3,8 @@
   "version": "1.0.0",
   "main": "src/index.ts",
   "dependencies": {
-    "openai": "^4.0.0"
+    "openai": "^4.0.0",
+    "hono": "^3.2.7",
+    "wrangler": "^3.1.0"
   }
 }
