--- a/package.json
+++ b/package.json
@@ -6,5 +6,9 @@
     "openai": "^4.0.0",
     "hono": "^3.2.7",
     "wrangler": "^3.1.0"
+  },
+  "scripts": {
+    "start": "wrangler dev",
+    "deploy": "wrangler deploy --dispatch-namespace testing"
   }
 }
